# vidai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ai-training.md
skills/vidai/: SKILL.md
src/vidai/: __init__.py  aggregate.py  audio.py  cli.py  dedup.py  doctor.py  download.py  errors.py  ffmpeg_utils.py  frames.py  keyframes.py  mcp_server.py  pipeline.py  scenes.py  transcribe.py
tests/: test_aggregate.py  test_cli_parse.py  test_dedup.py  test_download_errors.py  test_ffmpeg_probe.py  test_filter_speech.py  test_frames.py  test_keyframes.py  test_mcp_server.py  test_scenes_integration.py  test_source_resolution.py  test_transcribe.py  test_windows.py
